@@ -33,6 +33,7 @@
 	* Options:
 	  - default of sortloot changed to 'loot'
 	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
+	  - Permanent hallucination option: perma_hallu
 
 	* user interface improvements:
 	  - HP notify, showing HP changes in the message area (from NAO)
